# optcg

./: .gitignore  project_structure.md  pyproject.toml
data/raw/: op01_sold_listings.json
src/scraper/: __init__.py  ebay_api.py  ebay_client.py  parser.py  rate_limiter.py  sold_listings.py
